--- a/training_model/train.ipynb
+++ b/training_model/train.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Dataset/data.csv', delimiter=',',escapechar='\\\\',header=0,on_bad_lines='skip', encoding='utf-8')"
+    "data = pd.read_csv('../Dataset/data.csv', delimiter=',',escapechar='\\\\',header=0,on_bad_lines='skip', encoding='utf-8')"
    ]
   },
   {
